ACLOCAL_AMFLAGS = -I m4

SUBDIRS = po src config

EXTRA_DIST = \
	examples/README.examples \
	examples/auto/shutdown \
	examples/auto/startup \
	examples/compose/Macro-Expansion \
	examples/main/Create-Tomboy-Note \
	examples/main/Mass-mail \
	examples/main/Open-Tomboy-Notes \
	examples/main/Print-action-names-to-stdout \
	examples/main/Recusively-mark-messages-as-read \
	AUTHORS \
	COPYING \
	ChangeLog \
	INSTALL \
	NEWS \
	README 

BZIP2_ENV = 
